[tool.poetry]
name = "crepe"
version = "0.1.0"
description = "Unofficial implementation of CREPE Pitch Tracker by CNN with pytorch."
authors = [""]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.3.1+cu121", source = "torch_cu121"}
torchvision = {version = "^0.18.1+cu121", source = "torch_cu121"}
torchaudio = {version = "^2.3.1+cu121", source = "torch_cu121"}
matplotlib = "^3.9.2"
inflect = "^7.3.1"
scipy = "^1.14.1"
soundfile = "^0.12.1"
tensorboard = "^2.17.1"
tqdm = "^4.66.5"
unidecode = "^1.3.8"
pyyaml = "^6.0.2"
notebook = "^7.2.1"
einops = "^0.8.0"
sounddevice = "^0.5.0"
cython = "^3.0.11"
wandb = "^0.17.7"
pydub = "^0.25.1"
llvmlite = "^0.43.0"
librosa = "^0.10.2.post1"
onnx = "^1.16.2"
easydict = "^1.13"
omegaconf = "^2.3.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
mypy = "^1.11.1"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
mdformat-gfm = "^0.3.6"
mdformat_frontmatter = "^2.0.8"
mdformat_footnote = "^0.1.1"


[[tool.poetry.source]]
name = "torch_cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
